--- a/app/src/main/res/layout/content_crop_estimate_manager.xml
+++ b/app/src/main/res/layout/content_crop_estimate_manager.xml
@@ -5,7 +5,148 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CropEstimateManager"
+    tools:context=".activities.CropEstimateManagerActivity"
     tools:showIn="@layout/activity_crop_estimate_manager">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp">
+                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:orientation="horizontal">
+                    <TableRow
+                        android:id="@+id/tableRow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/crop_invoice_table_border"
+
+                        >
+
+                        <LinearLayout
+                            android:layout_width="100dp"
+                            android:layout_height="28dp"
+                            android:background="@drawable/crop_invoice_table_border"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/txt_view_crop_invoice_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="@string/item_details_label"
+                                android:background="@drawable/crop_invoice_table_border"
+                                android:gravity="center"
+                                android:textSize="14sp" android:textStyle="bold"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="@dimen/crop_estimate_small_column_size"
+                            android:layout_height="28dp"
+                            android:background="@drawable/crop_invoice_table_border"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/txt_view_crop_invoice_age"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="@string/quantity"
+                                android:background="@drawable/crop_invoice_table_border"
+                                android:gravity="center"
+                                android:textSize="16sp" android:textStyle="bold"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="@dimen/crop_estimate_small_column_size"
+                            android:layout_height="28dp"
+                            android:background="@drawable/crop_invoice_table_border"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/txt_view_crop_invoice_weight"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="@string/rate"
+                                android:background="@drawable/crop_invoice_table_border"
+                                android:gravity="center"
+                                android:textSize="16sp" android:textStyle="bold"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="@dimen/crop_estimate_small_column_size"
+                            android:layout_height="28dp"
+                            android:background="@drawable/crop_invoice_table_border"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/txt_view_crop_invoice_height"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="@string/label_tax"
+                                android:background="@drawable/crop_invoice_table_border"
+                                android:gravity="center"
+                                android:textSize="16sp" android:textStyle="bold"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="@dimen/crop_estimate_small_column_size"
+                            android:layout_height="28dp"
+                            android:background="@drawable/crop_invoice_table_border"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/txt_view_crop_invoice_bcs"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="@string/amount_label"
+                                android:background="@drawable/crop_invoice_table_border"
+                                android:gravity="center"
+                                android:textSize="16sp" android:textStyle="bold"/>
+                        </LinearLayout>
+
+
+                    </TableRow>
+                    <LinearLayout
+                        android:layout_width="60dp"
+                        android:layout_height="28dp"
+                        android:orientation="horizontal">
+                    </LinearLayout>
+                </LinearLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyc_view_crop_invoice_item_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/gray"
+                    >
+
+                </android.support.v7.widget.RecyclerView>
+            </LinearLayout>
+
+        </HorizontalScrollView>
+        <TextView
+            android:id="@+id/txt_view_crop_estimate_sub_total"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/crop_invoice_table_border"
+            android:gravity="center"
+            android:textSize="14sp"/>
+        <Button
+            android:id="@+id/btn_add_item"
+            style="@style/Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorPrimary"
+            android:drawableLeft="@android:drawable/ic_input_add"
+            android:drawableTint="#ffffff"
+            android:text="@string/label_add_item"
+            android:textColor="#ffffff"
+             />
+    </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
