--- a/app/src/main/res/layout/activity_crop_cultivation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_cultivation_manager.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:paddingBottom="4dp"
     tools:context=".activities.CropCultivationManagerActivity">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -202,5 +204,5 @@
             android:textColor="#ffffff" />
 
     </LinearLayout>
-
+</ScrollView>
 </LinearLayout>
